    - Remove tabs from debian/changelog, since they confuse
      dpkg-parsechangelog.
    - Add missing quotes in debhelper.mk NOSTRIP test.
    - Don't add libc-dir-add.info to info after all
      (Closes: #222171, #230765).
      (debhelper.in/glibc-doc.info, debhelper.in/glibc-doc.install)

  * Ben Collins <bcollins@debian.org>

    - Added and enabled a sparc v9b target (UltraSPARC III).

 -- Daniel Jacobowitz <dan@debian.org>  Mon,  9 Feb 2004 14:05:18 -0500

glibc (2.3.2.ds1-11) unstable; urgency=low

  * Jeff Bailey <jbailey@nisa.net>

   - debian/control.in/s390x: Remove -dev dependency on gcc-3.2.
   - debian/sysdeps/s390.mk: Add missing )
   - debian/rules: Fixes for cross-compiling
   - debian/patches/90_glibc233_tcsetaddr.dpatch: LSB Fix for tcgetattr
     (Closes: #218131)
   - debian/sysdeps/depflags.pl: Update wine conflicts.
     (Closes: #218717)
   - debian/sysdeps/depflags.pl: Update cyrus-imapd conflicts.
     (Closes: #220983)
   - debian/sysdeps/sparc.mk: Force -m32 when building sparcv9
   - debian/patches/glibc-sparc-timing.dpatch: New file to let sparcv9 works.
     (Closes: #222886)
   - debian/patches/nptl-page-align.dpatch: New file to fix page
     alignment troubles.  (Closes: #223241, #225466)

   - debian/patches/hurd-exit-attr-hidden.dpatch: New file to fix
     compilation on gcc-3.3 and hurd-i386
   - debian/patches/hurd-i386-hwcap.dpatch: New file to give the needed
     i386 HWCAP defines on hurd-i386
   - debian/patches/hurd-libc-lock.dpatch: New file to fix FTBFS on hurd-i386
   - debian/patches/hurd-utmp-file.dpatch: New file to fix FTBFS on
     non-Linux.
   - debian/patches/glibc23-cmov.dpatch: Update for moved i386 HWCAP
     definitions.
   - debian/patches/glibc23-sse-oldkernel.dpatch: Updated for
     severelly munged sysdeps/unix/sysv/linux/i386/dl-procinfo.h
     Thanks to Barry deFreese for helping get these in order.

   - debian/patches/00list: Update
