@@ -106,6 +106,20 @@ Description: GNU C Library: PIC archive library
  boot floppies. If you are not making your own set of Debian boot floppies
  using the `boot-floppies' package, you probably don't need this package.
 
+Package: libc6-udeb
+XC-Package-Type: udeb
+Architecture: arm i386 m68k mips mipsel powerpc sparc s390 hppa sh3 sh4 sh3eb sh4eb
+Section: debian-installer
+Priority: extra
+Provides: libc6, libc-udeb, ${locale:Depends}
+Description: GNU C Library: Shared libraries - udeb
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains a minimal set of libraries needed for the debian
+ installer.  Do not install it on a normal system.
+
 Package: libc6.1
 Architecture: alpha ia64
 Section: base
@@ -162,6 +176,20 @@ Description: GNU C Library: PIC archive library
  standard libc shared library. The reduced library is used on the Debian
  boot floppies. If you are not making your own set of Debian boot floppies
  using the `boot-floppies' package, you probably don't need this package.
+
+Package: libc6.1-udeb
+XC-Package-Type: udeb
+Architecture: alpha ia64
+Section: debian-installer
+Priority: extra
+Provides: libc6.1, libc-udeb, ${locale:Depends}
+Description: GNU C Library: Shared libraries - udeb
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains a minimal set of libraries needed for the debian
+ installer.  Do not install it on a normal system.
 
 Package: libc0.3
 Architecture: hurd-i386
@@ -220,6 +248,20 @@ Description: GNU C Library: PIC archive library
  boot floppies. If you are not making your own set of Debian boot floppies
  using the `boot-floppies' package, you probably don't need this package.
 
+Package: libc0.3-udeb
+XC-Package-Type: udeb
+Architecture: hurd-i386
+Section: debian-installer
+Priority: extra
+Provides: libc0.3, libc-udeb, ${locale:Depends}
+Description: GNU C Library: Shared libraries - udeb
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains a minimal set of libraries needed for the debian
+ installer.  Do not install it on a normal system.
+
 Package: libc1
 Architecture: freebsd-i386
 Section: base
@@ -276,6 +318,20 @@ Description: GNU C Library: PIC archive library
  standard libc shared library. The reduced library is used on the Debian
  boot floppies. If you are not making your own set of Debian boot floppies
  using the `boot-floppies' package, you probably don't need this package.
+
+Package: libc1-udeb
+XC-Package-Type: udeb
+Architecture: freebsd-i386
+Section: debian-installer
+Priority: extra
+Provides: libc1, libc-udeb, ${locale:Depends}
+Description: GNU C Library: Shared libraries - udeb
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains a minimal set of libraries needed for the debian
+ installer.  Do not install it on a normal system.
 
 Package: libc6-sparc64
 Architecture: sparc
@@ -376,17 +432,16 @@ Description: GNU C Library: Shared libraries [i686 optimized]
  Most notably, IBM's JDK. If you experience problems with such
  applications, you will need to remove this package.
 
-Package: libc-udeb
+Package: libnss-dns-udeb
+XC-Package-Type: udeb
 Architecture: any
 Section: debian-installer
-Priority: required
-Provides: ${locale:Depends}
-Description: GNU C Library: Shared libraries and Timezone data - udeb
+Priority: extra
+Description: GNU C Library: NSS helper for DNS
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
  and the standard math library, as well as many others.
- Timezone data is also included.
  .
- This package contains a minimal set of libraries needed for the debian
- installer.  Do not install it on a normal system.
+ This package contains dns nss helper needed for the debian installer.  Do not
+ install it on a normal system.
 
