@@ -55,3 +55,17 @@ Description: GNU C Library: PIC archive library
  boot floppies. If you are not making your own set of Debian boot floppies
  using the `boot-floppies' package, you probably don't need this package.
 
+Package: @libc@-udeb
+XC-Package-Type: udeb
+Architecture: @archs@
+Section: debian-installer
+Priority: extra
+Provides: @libc@, libc-udeb, ${locale:Depends}
+Description: GNU C Library: Shared libraries - udeb
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains a minimal set of libraries needed for the debian
+ installer.  Do not install it on a normal system.
+
