@@ -1,14 +1,0 @@
-Package: libc-udeb
-Architecture: any
-Section: debian-installer
-Priority: required
-Provides: ${locale:Depends}
-Description: GNU C Library: Shared libraries and Timezone data - udeb
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C library
- and the standard math library, as well as many others.
- Timezone data is also included.
- .
- This package contains a minimal set of libraries needed for the debian
- installer.  Do not install it on a normal system.
-
