@@ -1,0 +1,13 @@
+Package: libnss-dns-udeb
+XC-Package-Type: udeb
+Architecture: any
+Section: debian-installer
+Priority: extra
+Description: GNU C Library: NSS helper for DNS
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C library
+ and the standard math library, as well as many others.
+ .
+ This package contains dns nss helper needed for the debian installer.  Do not
+ install it on a normal system.
+
