@@ -1,0 +1,3 @@
+# FIXME: someday we may need to handle installing into non-lib.
+debian/tmp-libc/lib/libnss_dns*.so* lib
+
