@@ -25,7 +25,7 @@ debian/control: debian/control.in/main $(control_deps) \
 	cat debian/control.in/sparc64		>> $@T
 	cat debian/control.in/s390x		>> $@T
 	cat debian/control.in/opt		>> $@T
-	cat debian/control.in/libc-udeb         >> $@T
+	cat debian/control.in/libnss-dns-udeb   >> $@T
 	sed -e 's%@libc@%$(libc)%g;s%@glibc@%glibc%g' \
 	    -e 's%@threads_archs@%$(threads_archs)%g' < $@T > $@
 	rm $@T
