@@ -147,6 +147,13 @@ glibc (2.3.2.ds1-12) unstable; urgency=low
 
     - Added and enabled a sparc v9b target (UltraSPARC III).
 
+  * Bastian Blank <waldi@debian.org>
+
+    - Add libnss-dns-udeb package.
+    - Rename udebs to match the real packages.  (Closes: #183139)
+    - Fix provides of udebs.  (Closes: #183143)
+    - Use debhelper udeb knowledge.
+
  -- Daniel Jacobowitz <dan@debian.org>  Mon,  9 Feb 2004 14:05:18 -0500
 
 glibc (2.3.2.ds1-11) unstable; urgency=low
